--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am your JITHIN EK <br> This is my first webapp.<br>
-            Thank You!
+            <h1>A new heading</h1>
+	    I've made some new local changes.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
