--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your JITHIN EK <br> This is my first webapp.<br>
+            Hi! I am JITHIN EK <br> This is my first webapp.<br>
             <h1>A new heading</h1>
 	    I've made some new local changes.
         </div>
