[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
         <title>
             Artical One | JITHIN Ek
         </title>
+        <meta neme='viewport' content="width=device-width, initial=scale=1"/>
     </head>
     <body>
         <div>
