--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,8 +1,29 @@
 <html>
-  <head>
-  
-  </head>
-  <body>
-  
-  </body>
+    <head>
+        <title>
+            Artical Three | JITHIN Ek
+        </title>
+        <meta neme='viewport' content="width=device-width, initial=scale=1"/>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>Artical Three</h3>
+        <div>
+            Sep 5,2018
+        </div>
+        <div>
+            <p>
+                This is the content for my Third article. This is the content for my first article. This is the content for my first article. This is the content for my Third article. This is the content for my Third article. This is the content for my Third article. This is the content for my Third article. This is the content for my Third article. This is the content for my Third article. 
+            </p>
+            <p>
+                This is the content for my Third article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my Third article. This is the content for my Third article. This is the content for my Third article. This is the content for my Third article. 
+            </p>
+            <p>
+                This is the content for my Third article. This is the content for my first article. This is the content for my Third article. This is the content for my Third article. This is the content for my first article. This is the content for my Third article. This is the content for my Third article. This is the content for my Third article. This is the content for my Third article. 
+            </p>
+        </div>
+    </body>
 </html>
