--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,26 +4,39 @@
             Artical One | JITHIN Ek
         </title>
         <meta neme='viewport' content="width=device-width, initial=scale=1"/>
+        <style>
+          .container{
+              max-width=800px;
+              margin:auto;
+              color:#4a4a4a;
+              font-family:sans-serif;
+              padding-top:60px;
+              padding-right:20px;
+              padding-left:20px;
+          }  
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>Artical One</h3>
-        <div>
-            Sep 5,2018
-        </div>
-        <div>
-            <p>
-                This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. 
-            </p>
-            <p>
-                This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. 
-            </p>
-            <p>
-                This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. 
-            </p>
+        <div class='container'>
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>Artical One</h3>
+            <div>
+                Sep 5,2018
+            </div>
+            <div>
+                <p>
+                    This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. 
+                </p>
+                <p>
+                    This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. 
+                </p>
+                <p>
+                    This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. 
+                </p>
+            </div>
         </div>
     </body>
 </html>
