--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
         <meta neme='viewport' content="width=device-width, initial=scale=1"/>
         <style>
           .container{
-              max-width=800px;
+              max-width:800px;
               margin:0 auto;
               color:#4a4a4a;
               font-family:sans-serif;
