[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,17 +4,7 @@
             Artical One | JITHIN Ek
         </title>
         <meta neme='viewport' content="width=device-width, initial=scale=1"/>
-        <style>
-          .container{
-              max-width:800px;
-              margin:0 auto;
-              color:#4a4a4a;
-              font-family:sans-serif;
-              padding-top:60px;
-              padding-right:20px;
-              padding-left:20px;
-          }  
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class='container'>
@@ -27,15 +17,7 @@
                 Sep 5,2018
             </div>
             <div>
-                <p>
-                    This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. 
-                </p>
-                <p>
-                    This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. 
-                </p>
-                <p>
-                    This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. 
-                </p>
+                
             </div>
         </div>
     </body>
