--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,17 +4,7 @@
             Artical Three | JITHIN Ek
         </title>
         <meta neme='viewport' content="width=device-width, initial=scale=1"/>
-        <style>
-          .container{
-              max-width:800px;
-              margin:0 auto;
-              color:#4a4a4a;
-              font-family:sans-serif;
-              padding-top:60px;
-              padding-right:20px;
-              padding-left:20px;
-          }  
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class='container'>
