--- a/ui/index.html
+++ b/ui/index.html
@@ -4,14 +4,21 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am JITHIN EK <br> This is my first webapp.<br>
-            <h1>A new heading</h1>
-	    I've made some new local changes.
+        <div class="container">
+            <div class="center">
+                <img src="https://www.celebritynetworth.com/richest-celebrities/actors/shahrukh-khan-net-worth/" class="img-medium"/>
+            </div>
+            <br>
+            <h1>Personal</h1>
+            <div class="center text-big bold">
+                Hi! I am JITHIN EK
+                <h1>Professional</h1>
+    	        I work at GOOGLE
+            </div>
+            <hr/>
+            <div class= "footer">
+                
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
