--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img src="https://www.celebritynetworth.com/richest-celebrities/actors/shahrukh-khan-net-worth/" class="img-medium"/>
+                <img id = "madi" src="https://www.celebritynetworth.com/richest-celebrities/actors/shahrukh-khan-net-worth/" class="img-medium"/>
             </div>
             <br>
             <h1>Personal</h1>
