--- a/ui/index.html
+++ b/ui/index.html
@@ -4,21 +4,16 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="container">
-            <div class="center">
-                <img id = "madi" src="https://www.celebritynetworth.com/richest-celebrities/actors/shahrukh-khan-net-worth/" class="img-medium"/>
-            </div>
-            <br>
-            <h1>Personal</h1>
-            <div class="center text-big bold">
-                Hi! I am JITHIN EK
-                <h1>Professional</h1>
-    	        I work at GOOGLE
-            </div>
-            <hr/>
-            <div class= "footer">
-                
-            </div>
+        
+        <div class="center">
+            <img id = "madi" src="/ui/madi.png" class="img-medium"/>
+        </div>
+        <br>
+        <h1>Personal</h1>
+        <div class="center text-big bold">
+            Hi! I am JITHIN EK
+            <h1>Professional</h1>
+	        I work at GOOGLE
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
