--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,9 @@
             <h4>Professional</h4>
 	        I work at GOOGLE
         </div>
+        <script>
+            alert('Hi, I\'m Javascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
