--- a/ui/index.html
+++ b/ui/index.html
@@ -5,11 +5,11 @@
     </head>
     <body>
         
-        <div id = "main-text" class="center">
+        <div class="center">
             <img id = "madi" src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id = "main-text" class="center text-big bold">
             Hi! I am JITHIN EK
             <h4>Professional</h4>
 	        I work at GOOGLE
