--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,7 @@
             </div>
             <hr>
             <br>
+            <h3>Personal</h3>
             <div id = "main-text" class="center text-big bold">
                 Hi! I am JITHIN EK
                 <h4>Professional</h4>
