--- a/ui/index.html
+++ b/ui/index.html
@@ -13,10 +13,12 @@
             <h3>Personal</h3>
             <div id = "main-text" class="center text-big bold">
                 Hi! I am JITHIN EK
-                <h4>Professional</h4>
-                I work at GOOGLE
             </div>
             <hr>
+            <h3>Professional</h3>
+            <div>
+                I work at GOOGLE
+            </div>
             <div class="footer">
                 
             </div>
